--- a/src/scraper/requirements.txt
+++ b/src/scraper/requirements.txt
@@ -1,9 +1,13 @@
-beautifulsoup4==4.11.1
-certifi @ file:///C:/b/abs_ac29jvt43w/croot/certifi_1665076682579/work/certifi
-charset-normalizer==2.1.1
-idna==3.4
-python-dotenv==0.21.0
-requests==2.28.1
-soupsieve==2.3.2.post1
-urllib3==1.26.12
+beautifulsoup4==4.10.0
+certifi==2020.6.20
+chardet==4.0.0
+charset-normalizer==3.0.0
+idna==2.10
+metapy==0.2.13
+numpy==1.18.5
+python-dotenv==0.20.0
+pytoml==0.1.21
+requests==2.25.1
+soupsieve==2.1
+urllib3==1.26.9
 wincertstore==0.2
