--- a/src/scraper/requirements.txt
+++ b/src/scraper/requirements.txt
@@ -2,12 +2,16 @@ beautifulsoup4==4.10.0
 certifi==2020.6.20
 chardet==4.0.0
 charset-normalizer==3.0.0
+colorama==0.4.5
+configparser==4.0.2
+crayons==0.4.0
 idna==2.10
 metapy==0.2.13
 numpy==1.18.5
 python-dotenv==0.20.0
 pytoml==0.1.21
 requests==2.25.1
+selenium==3.141.0
 soupsieve==2.1
 urllib3==1.26.9
 wincertstore==0.2
