Update query to return urls

--- a/src/inverted_index/idx/inv/config.toml
+++ b/src/inverted_index/idx/inv/config.toml
@@ -1,6 +1,6 @@
 stop-words = "stopwords.txt"
 prefix = "."
-dataset = "campuswire"
+dataset = "corpus"
 corpus = "line.toml"
 index = "idx"
 [ranker]
